<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mangler</string><string name="channel_list">Channel Lists</string><string name="hostname">Hostname</string><string name="password">Password</string><string name="phonetic">Phonetic</string><string name="port_number">Port Number</string><string name="save">Save</string><string name="server_edit">Edit Server</string>
    
    




<string name="server_list">Server List</string>
<string name="server_name">Server Name</string><string name="server_view">Server View</string><string name="settings">Settings</string><string name="user_list">User List</string><string name="user_name">User Name</string>










<string name="start_talk">Start Talking</string>
<string name="stop_talk">Stop Talking</string>
</resources>
