<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_height="wrap_content" 
		android:orientation="vertical" 
		android:layout_width="fill_parent">
    	
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/server_name" />
	<EditText android:id="@+id/editServer" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" />

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/hostname" />
	<EditText android:id="@+id/editHost" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
		
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/port_number" />
	<EditText android:id="@+id/editPort" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/password" />
	<EditText android:id="@+id/editPass" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:inputType="textPassword"/>
		
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/user_name" />
	<EditText android:id="@+id/editUser" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
		
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/phonetic" />
	<EditText android:id="@+id/editPhonetic" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	
	<Button android:id="@+id/editSave" 
		android:text="@string/save"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:width="100px"/>
		

</LinearLayout>